--- a/src/09-scenery.css
+++ b/src/09-scenery.css
@@ -203,8 +203,6 @@
       mask-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1440 400' preserveAspectRatio='none'><path d='M0 400V258C50 252 95 240 135 222C165 208 190 186 220 172C240 163 258 168 275 158C295 146 310 128 330 118L345 110C360 122 372 138 390 148C405 156 418 152 432 144C450 134 462 116 478 104L495 92C505 85 512 78 522 70L535 60C555 80 570 104 592 122C615 141 640 152 668 162C700 173 730 180 760 190C795 202 825 215 858 224C888 232 920 236 950 234C980 232 1008 222 1035 208C1060 195 1080 176 1105 160L1125 146C1135 138 1143 130 1155 124L1168 117C1185 135 1200 155 1222 170C1250 189 1280 200 1310 210C1350 222 1395 227 1440 258V400Z'/></svg>");
       mask-size: 50% 100%;
       mask-repeat: repeat-x;
-      mask-size: 50% 100%;
-      mask-repeat: repeat-x;
     }
 
     /* Mid: soft rolling foothills, one gentle crest left-of-center,
@@ -214,15 +212,11 @@
       mask-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1440 400' preserveAspectRatio='none'><path d='M0 400V292C60 284 110 268 165 258C220 248 260 232 310 220C340 213 365 202 395 196L415 192C450 200 480 214 520 224C570 236 615 244 665 248C720 252 770 246 820 236C860 228 895 216 935 210C975 204 1010 208 1050 216C1100 226 1150 240 1200 248C1280 260 1360 274 1440 292V400Z'/></svg>");
       mask-size: 50% 100%;
       mask-repeat: repeat-x;
-      mask-size: 50% 100%;
-      mask-repeat: repeat-x;
     }
 
     /* Near: quiet dark treeline, barely undulating */
     .vitra-scenery-ridge-near {
       mask-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1440 400' preserveAspectRatio='none'><path d='M0 400V348C110 338 210 350 330 344C450 338 550 352 680 346C810 340 920 354 1050 348C1180 342 1310 352 1440 348V400Z'/></svg>");
-      mask-size: 50% 100%;
-      mask-repeat: repeat-x;
       mask-size: 50% 100%;
       mask-repeat: repeat-x;
     }
